@@ -8,6 +8,10 @@ opsi-winst/opsi-script (4.12.1.5) experimental; urgency=low
 
   * osdefinedfunctions: delLocalVar : fix removing loopvar after empty loop
   * osmain: fix in GetTempPath: if Univention temppath is /var/tmp
+  * osconf: new const opsiclientagentconf
+  * osmain: freeLinuxAgentStart: now using opsiclientagentconf
+  * Linux: osparser: CreateAndProcess: more logging around remount
+  * Linux: osparser: CreateAndProcess: moved remount
 
 -- Detlef Oertel <d.oertel@uib.de>  Thu, 06 Jun 2019:15:00:00 +0200
 
